--- a/sprint-2/project-frontend/package.json
+++ b/sprint-2/project-frontend/package.json
@@ -14,8 +14,10 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@rollup/rollup-darwin-x64": "^4.21.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "rollup": "^4.21.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -27,6 +29,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "vite": "^5.4.1"
+    "vite": "^5.4.3"
   }
 }
