--- a/sprint-2/project-backend/package.json
+++ b/sprint-2/project-backend/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
