--- a/sprint-2/project-frontend/package.json
+++ b/sprint-2/project-frontend/package.json
@@ -16,11 +16,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "rollup": "^4.21.2"
   },
   "optionalDependencies": {
-    "@rollup/rollup-win32-x64-msvc": "*",
-    "@rollup/rollup-darwin-x64": "*"
+    "@rollup/rollup-darwin-x64": "*",
+    "@rollup/rollup-win32-x64-msvc": "*"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
