--- a/sprint-2/project-frontend/package.json
+++ b/sprint-2/project-frontend/package.json
@@ -12,15 +12,17 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "font-abel": "^1.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rollup": "^4.21.2"
   },
   "optionalDependencies": {
-    "@rollup/rollup-win32-x64-msvc": "*",
-    "@rollup/rollup-darwin-x64": "*"
+    "@rollup/rollup-darwin-x64": "*",
+    "@rollup/rollup-win32-x64-msvc": "*"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
