--- a/sprint-2/project-backend/package.json
+++ b/sprint-2/project-backend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.6.1",
     "project-backend": "file:",
