--- a/sprint-2/project-backend/package.json
+++ b/sprint-2/project-backend/package.json
@@ -16,9 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.6.1",
-    "project-backend": "file:",
-    "request": "^2.88.2"
+    "mongoose": "^8.6.1"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
