--- a/sprint-3/backend/package.json
+++ b/sprint-3/backend/package.json
@@ -18,7 +18,8 @@
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
 		"jsonwebtoken": "^9.0.2",
-		"mongoose": "^8.6.1"
+		"mongoose": "^8.6.1",
+		"validator": "^13.12.0"
 	},
 	"devDependencies": {
 		"morgan": "^1.10.0",
