--- a/sprint-3/backend/package.json
+++ b/sprint-3/backend/package.json
@@ -4,8 +4,9 @@
 	"main": "app.js",
 	"scripts": {
 		"start": "node app.js",
-		"dev": "nodemon app.js"
-	},
+		"dev": "nodemon app.js",
+        "tests" : "jest --verbose --runInBand"
+	}, 
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
@@ -22,7 +23,9 @@
 		"validator": "^13.12.0"
 	},
 	"devDependencies": {
+		"jest": "^29.7.0",
 		"morgan": "^1.10.0",
-		"nodemon": "^3.1.6"
+		"nodemon": "^3.1.6",
+		"supertest": "^7.0.0"
 	}
 }
