--- a/sprint-3/backend/package.json
+++ b/sprint-3/backend/package.json
@@ -5,8 +5,8 @@
 	"scripts": {
 		"start": "node app.js",
 		"dev": "nodemon app.js",
-        "tests" : "jest --verbose --runInBand"
-	}, 
+		"tests": "jest --verbose --runInBand"
+	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
@@ -20,7 +20,9 @@
 		"express": "^4.19.2",
 		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.6.1",
-		"validator": "^13.12.0"
+		"swagger-ui-express": "^5.0.1",
+		"validator": "^13.12.0",
+		"yamljs": "^0.3.0"
 	},
 	"devDependencies": {
 		"jest": "^29.7.0",
